--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9582,3 +9582,170 @@ a.text-dark:hover, a.text-dark:focus {
     transform: translateY(-15px);
   }
 }
+ /*register and gin style popup*/
+.plates-display {
+    display: flex;
+    width: 100%;
+    height: 280px;
+    padding: 40px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.plates-display::before {
+    content: "";
+    height: 20px;
+    width: 100%;
+    position: absolute;
+    top: calc(50% - 10px);
+    left: 0;
+    background: #CCC;
+    z-index: 1;
+    border-radius: 4px;
+}
+
+.plates-display div {
+    display: flex;
+    width: 40%;
+    align-items: center;
+    z-index: 2;
+    position: relative;
+}
+
+.plates-display div+div {
+    margin-left: 20%;
+}
+
+.plates-display div:last-child {
+    justify-content: flex-end;
+}
+
+.plates-display div:last-child span::after {
+    transform: rotate(90deg) translate(-50%, -50%);
+}
+
+.plates-display span {
+    background: black;
+    margin: 2px;
+    position: relative;
+    border-radius: 4px;
+}
+
+.plates-display span::after {
+    content: attr(data-weight);
+    color: #AAA;
+    font-size: 0.7rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: rotate(-90deg) translate(-50%, -50%);
+    transform-origin: 0 0;
+    font-weight: bold;
+}
+
+.plates-display span[data-weight="45"] {
+    width: 40px;
+    height: 200px;
+}
+
+.plates-display span[data-weight="25"] {
+    width: 28px;
+    height: 200px;
+}
+
+.plates-display span[data-weight="15"] {
+    width: 28px;
+    height: 180px;
+}
+
+.plates-display span[data-weight="10"] {
+    width: 28px;
+    height: 160px;
+}
+
+.plates-display span[data-weight="5"] {
+    width: 20px;
+    height: 140px;
+}
+
+.plates-display span[data-weight="2.5"] {
+    width: 20px;
+    height: 60px;
+}
+
+/*body {*/
+/*    background: #fff;*/
+/*    padding: 20px;*/
+/*}*/
+
+.page-wrap {
+    max-width: 900px;
+    margin: 0 auto;
+    border-radius: 1em;
+    padding: 2em;
+}
+
+.weight-slider {
+    text-align: center;
+}
+
+.weight-slider input {
+    width: 300px;
+}
+.btnrl{
+    position: relative;
+    right: 300px;
+    margin-right: 6px;
+}
+
+.txtl{
+    position: absolute;
+    line-height: 1;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: white;
+    color: black;
+    padding: 5px;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float: right;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10%;
+    text-align: center;
+    right: 0;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: white;}
+
